@@ -1,3 +1,7 @@
+master
+
+  * HTML::AttributeMerger: rename option attr_delimiter to merge_attrs
+
 0.5.5
 
   * HTML pretty: Do not remove empty lines, add newline after doctype
